--- a/_includes/body.html
+++ b/_includes/body.html
@@ -3,11 +3,11 @@
         <!-- Title -->
         <h1>
             <i class="fa fa-circle-o-notch fa-spin"></i>
-            {% if page.title %}
+            <!-- {% if page.title %}
                 <a href="." >{{ page.title | escape }}</a>
             {% else %}
                 <a href="." >{{ site.title | escape }}</a>
-            {% endif %}
+            {% endif %} -->
         </h1>
     </div>
     <div class="page-wrapper" tabindex="-1" role="main">
